--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=teste-junior
+APP_NAME=api-crud-laravel6x
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=testejunior
+DB_DATABASE=apiCrudLaravel
 DB_USERNAME=root
 DB_PASSWORD=
 
